--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_b">BActivity</string>
+    <string name="title_activity_b2">B2Activity</string>
 
 </resources>
